--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
         read_only: true
   ########################################################################
   php:
-    image: xplouder/docker-playground:1.0.0
+    image: xplouder/docker-playground:latest
     build:
       context: ./dockerfiles
       dockerfile: Dockerfile_php_fpm_phalcon_alpine
