--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
         read_only: true
   ########################################################################
   php:
-    image: xplouder/docker-playground:latest
+    image: xplouder/docker-playground:alpine-latest
     build:
       context: ./dockerfiles
       dockerfile: Dockerfile_php_fpm_phalcon_alpine
