--- a/services_settings/nginx_conf.d/api.conf
+++ b/services_settings/nginx_conf.d/api.conf
@@ -11,16 +11,7 @@ server {
     access_log /var/log/nginx/access.log;
 
     location / {
-
-      if (-f $request_filename) {
-          break;
-      }
-
-      if (!-e $request_filename) {
-          rewrite ^(.+)$ /index.php?_url=$1 last;
-          break;
-      }
-
+        try_files $uri $uri/ /index.php?_url=$uri&$args;
     }
 
     location ~ \.php$ {    
@@ -31,6 +22,9 @@ server {
 
         include fastcgi_params;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
+
+        fastcgi_param PATH_INFO       $fastcgi_path_info;
+        fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
