--- a/services_settings/nginx_conf.d/api.conf
+++ b/services_settings/nginx_conf.d/api.conf
@@ -1,11 +1,25 @@
 server {
     charset utf-8;
 
-    listen 80;
+    listen 8000;
     root /code;
     server_name php-docker.local;
     index index.php index.html;
-    
+
+    ########
+    # SSL ##
+    listen 4430 ssl default_server;
+
+    #ssl on;
+    ssl_session_timeout 5m;
+    ssl_protocols SSLv2 SSLv3 TLSv1;
+    ssl_ciphers ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
+    ssl_prefer_server_ciphers on;
+
+    ssl_certificate /var/nginx/certs/default.cert;
+    ssl_certificate_key /var/nginx/certs/default.key;
+    ########
+
     # Logs
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
