- CMD 'hacky' command fix

--- a/dockerfiles/Dockerfile_ssl_nginx_alpine
+++ b/dockerfiles/Dockerfile_ssl_nginx_alpine
@@ -34,4 +34,4 @@ RUN touch /var/log/cron.log
 
 USER www-data
 
-CMD ["crond && nginx", "-g", "daemon off;"]
+CMD ["sh", "-c", "crond && nginx -g 'daemon off;' "]
