--- a/dockerfiles/Dockerfile_php_fpm_phalcon_alpine
+++ b/dockerfiles/Dockerfile_php_fpm_phalcon_alpine
@@ -52,11 +52,12 @@ RUN set -ex \
 ENV PHPIZE_DEPS autoconf dpkg-dev dpkg file g++ gcc libc-dev make pcre-dev pkgconf re2c
 ENV PHP_INI_DIR /usr/local/etc/php
 
-RUN set -xe && apk add --no-cache --virtual yaml-deps $PHPIZE_DEPS
-RUN set -xe && apk add --no-cache yaml-dev
-RUN pecl install yaml-2.0.2
-RUN echo "extension=yaml.so" >> $PHP_INI_DIR/conf.d/01_yaml.ini
-RUN apk del --purge yaml-deps
+RUN set -xe \
+	&& apk add --no-cache --virtual yaml-deps $PHPIZE_DEPS \
+	&& apk add --no-cache yaml-dev \
+	&& pecl install yaml-2.0.2 \
+	&& echo "extension=yaml.so" >> $PHP_INI_DIR/conf.d/01_yaml.ini \
+	&& apk del --purge yaml-deps
 
 
 # Other extensions
