- Xdebug configs updated - php-fpm now logs everything

--- a/services_settings/php_configs/zz_extra_configs.ini
+++ b/services_settings/php_configs/zz_extra_configs.ini
@@ -1,4 +1,11 @@
 [xdebug]
 xdebug.remote_enable = 1
 xdebug.remote_autostart = 1
-xdebug.remote_connect_back = 1
+xdebug.cli_color = 1
+
+; This will This will return every connection/attempt to debug to the specific ip
+; Note: in development environment you might want to use the host ip
+xdebug.remote_host = 172.19.0.1
+
+; This will return every connection/attempt to debug to the requester
+;xdebug.remote_connect_back = 1
