- docker-compose.yaml update with a required config to cli debug

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ SSH_FOLDER_PATH=
 MYSQL_ROOT_PASSWORD=
 MYSQL_USER=local
 MYSQL_PASSWORD=local
+
+##########################
+# IDE ####################
+IDE_SERVER_NAME=
