- corrected Nginx logging folder to match stack logs folders

--- a/services_settings/nginx_conf.d/api.conf
+++ b/services_settings/nginx_conf.d/api.conf
@@ -6,8 +6,8 @@ server {
     server_name php-docker.local;
     index index.php index.html;
 
-    ########
-    # SSL ##
+    #######
+    # SSL #
     listen 4430 ssl default_server;
 
     #ssl on;
@@ -20,9 +20,11 @@ server {
     ssl_certificate_key /var/nginx/certs/default.key;
     ########
 
-    # Logs
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
+    ########
+    # Logs #
+    error_log  /logs/other/nginx/error.log;
+    access_log /logs/other/nginx/access.log;
+    ########
 
     location / {
         try_files $uri $uri/ /index.php?_url=$uri&$args;
