- added tar package (related to: https://unix.stackexchange.com/questions/302192/how-to-solve-tar-invalid-magic-error-on-linux-alpine)

--- a/dockerfiles/Dockerfile_php_fpm_phalcon_alpine
+++ b/dockerfiles/Dockerfile_php_fpm_phalcon_alpine
@@ -70,7 +70,7 @@ RUN set -ex \
 
 # ######################################################################################################################
 # # CLI TOOLS ##########################################################################################################
-RUN apk add --no-cache vim nano git tree wget bash curl
+RUN apk add --no-cache vim nano git tree wget bash curl tar
 
 # ######################################################################################################################
 # # EXTRA LIBS #########################################################################################################
