--- a/dockerfiles/Dockerfile_php_fpm_phalcon_alpine
+++ b/dockerfiles/Dockerfile_php_fpm_phalcon_alpine
@@ -42,7 +42,7 @@ RUN set -ex \
 RUN set -ex \
 	&& apk add --no-cache --virtual xdebug-deps autoconf freetype-dev g++ make gettext-dev \
 	&& docker-php-source extract \
-	&& pecl install xdebug-2.6.0alpha1 \
+	&& pecl install xdebug-2.6.0beta1 \
 	&& docker-php-ext-enable xdebug \
 	&& docker-php-source delete \
 	&& apk del --purge xdebug-deps
